react-toastify added

--- a/src/assets/scss/argon-dashboard-react.scss
+++ b/src/assets/scss/argon-dashboard-react.scss
@@ -80,4 +80,5 @@
 
 // React Differences
 @import "react/react-differences";
-@import "argon-dashboard/custom/carousel/carousel"
+@import "argon-dashboard/custom/carousel/carousel";
+@import "argon-dashboard/custom/toastify/toastify";
