vehicles get and image displayed

--- a/src/assets/scss/argon-dashboard-react.scss
+++ b/src/assets/scss/argon-dashboard-react.scss
@@ -82,3 +82,4 @@
 @import "react/react-differences";
 @import "argon-dashboard/custom/carousel/carousel";
 @import "argon-dashboard/custom/toastify/toastify";
+@import "argon-dashboard/custom/custom-styling/custom-styling";
