--- a/src/assets/scss/argon-dashboard/custom/cards/_card.scss
+++ b/src/assets/scss/argon-dashboard/custom/cards/_card.scss
@@ -2,7 +2,9 @@
 // Card
 //
 
-
 .card-translucent {
-    background-color: rgba(18, 91, 152, 0.08);
+  background-color: rgba(18, 91, 152, 0.08);
+}
+.card-location {
+  height: 13rem;
 }
