--- a/src/assets/scss/argon-dashboard/custom/custom-styling/_custom-styling.scss
+++ b/src/assets/scss/argon-dashboard/custom/custom-styling/_custom-styling.scss
@@ -1,9 +1,12 @@
-.vehicle-image{
-    width:10rem;
-    height: 10rem;
-    img{
-        width:100%;
-        height: 100%;
-        object-fit: contain;
-    }
+.vehicle-image {
+  width: 10rem;
+  height: 10rem;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+.bg-custom {
+  background-color:#0097e6 /* #74b9ff */;
 }
